--- a/src/component/nav/nav.module.css
+++ b/src/component/nav/nav.module.css
@@ -4,6 +4,23 @@
 	align-items: center;
 	margin-right: 2rem;
 	font-size: 1.1rem;
+	margin-top: 1rem;
+}
+
+.login p {
+	margin-bottom: 0;
+}
+
+.loginStatus a {
+	color: black;
+	text-decoration: none;
+}
+
+.login:hover {
+	opacity: 0.6;
+}
+.loginStatus:hover {
+	cursor: pointer;
 }
 
 .loginStatus {
@@ -31,13 +48,14 @@
 }
 
 .li {
-	padding: 0.8rem;
+	padding: 0.7rem;
 }
 
 .search {
+	width: 9rem;
 	position: absolute;
-	right: 1rem;
-	padding-right: 3rem;
+	top: 0;
+	right: 2rem;
 }
 .form {
 	border-bottom: 1px solid black;
